--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,30 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+  background-color: rgb(218, 218, 218);
+  margin-top: 100px;
+}
+ul {
+  padding: 0;
+  margin-bottom: 0;
+}
+
+ul li {
+  border: 1px solid gray;
+  list-style: none;
+  padding: 5px;
+}
+
+h1 {
+  text-align: center;
+}
+input {
+  border: none;
+  width: 100%;
+}
+
+button {
+  border: none;
+  align-items: end;
+}
